--- a/eiso/pacman.conf
+++ b/eiso/pacman.conf
@@ -30,7 +30,7 @@ Architecture = auto
 
 # Misc options
 #UseSyslog
-#Color
+Color
 #NoProgressBar
 # We cannot check disk space from within a chroot environment
 #CheckSpace
@@ -74,6 +74,8 @@ LocalFileSigLevel = Optional
 
 #[core-testing]
 #Include = /etc/pacman.d/mirrorlist
+[exelentos]
+Server = https://exelentos.github.io/exelentos-repository/x86_64
 
 [core]
 Include = /etc/pacman.d/mirrorlist
@@ -87,14 +89,16 @@ Include = /etc/pacman.d/mirrorlist
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
 
-#[multilib-testing]
-#Include = /etc/pacman.d/mirrorlist
+[multilib-testing]
+Include = /etc/pacman.d/mirrorlist
 
-#[multilib]
-#Include = /etc/pacman.d/mirrorlist
+[multilib]
+Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
+ILoveCandy
+
